--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.25.3",
+    "@uploadthing/react": "^5.6.2",
+    "mongoose": "^7.6.1",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "svix": "^1.13.0",
+    "uploadthing": "^5.7.1"
   },
   "devDependencies": {
     "@types/node": "^20",
